@@ -3,15 +3,20 @@ package it.unisa.studenti.nc8.gametalk.business.service.post;
 import it.unisa.studenti.nc8.gametalk.business.enums.Category;
 import it.unisa.studenti.nc8.gametalk.business.enums.Order;
 import it.unisa.studenti.nc8.gametalk.business.exceptions.ServiceException;
-import it.unisa.studenti.nc8.gametalk.business.validators.ThreadValidator;
+import it.unisa.studenti.nc8.gametalk.business.model.user.User;
 import it.unisa.studenti.nc8.gametalk.business.validators.Validator;
+import it.unisa.studenti.nc8.gametalk.business.validators.post.thread.ThreadValidator;
+import it.unisa.studenti.nc8.gametalk.storage.dao.user.UserDAO;
+import it.unisa.studenti.nc8.gametalk.storage.dao.user.UserDAOImpl;
 import it.unisa.studenti.nc8.gametalk.storage.exceptions.DAOException;
 import it.unisa.studenti.nc8.gametalk.storage.dao.post.thread.ThreadDAO;
 import it.unisa.studenti.nc8.gametalk.storage.dao.post.thread.ThreadDAOImpl;
 import it.unisa.studenti.nc8.gametalk.storage.persistence.Database;
 import it.unisa.studenti.nc8.gametalk.storage.persistence.mappers.thread.ThreadMapper;
 import it.unisa.studenti.nc8.gametalk.business.model.post.thread.Thread;
+import it.unisa.studenti.nc8.gametalk.storage.persistence.mappers.user.UserMapper;
 
+import java.sql.SQLException;
 import java.time.LocalDate;
 import java.util.List;
 
@@ -22,10 +27,21 @@ import java.util.List;
 public class ThreadServiceImpl implements ThreadService {
 
     /**
+     * Oggetto {@link Database}, contiene informazioni sul database
+     * con cui interagire.
+     */
+    private final Database db;
+    /**
      * Il DAO utilizzato per effettuare operazioni CRUD
      * su oggetti {@link Thread}.
      */
     private final ThreadDAO threadDAO;
+
+    /**
+     * Il DAO utilizzato per effettuare operazioni CRUD
+     * su oggetti {@link User}.
+     */
+    private final UserDAO userDAO;
 
     /**
      * Il validator che valida i dati contenuti in
@@ -39,7 +55,9 @@ public class ThreadServiceImpl implements ThreadService {
      * @param db il database utilizzato per la persistenza dei dati.
      */
     public ThreadServiceImpl(final Database db) {
+        this.db = db;
         this.threadDAO = new ThreadDAOImpl(db, new ThreadMapper());
+        this.userDAO = new UserDAOImpl(db, new UserMapper());
         this.threadValidator = new ThreadValidator();
     }
 
@@ -47,34 +65,28 @@ public class ThreadServiceImpl implements ThreadService {
      * Crea un nuovo thread con i dati forniti e lo salva nel database.
      * Il thread viene validato prima di essere salvato.
      *
-     * @param userId L'ID dell'utente che sta creando il thread.
-     * @param title Il titolo del nuovo thread.
-     * @param body Il corpo del nuovo thread.
-     * @param votes Il numero iniziale di voti del thread.
-     * @param archived Indica se il thread è archiviato
-     *                 al momento della creazione.
+     * @param username L'ID dell'utente che sta creando il thread.
+     * @param title    Il titolo del nuovo thread.
+     * @param body     Il corpo del nuovo thread.
      * @param category La categoria del nuovo thread.
-     *
      * @throws ServiceException Se il thread non è valido o se si verifica un
      *                          errore durante il salvataggio nel database.
      */
     @Override
-    public void createThread(
-            final long userId,
+    public long createThread(
+            final String username,
             final String title,
             final String body,
-            final int votes,
-            final boolean archived,
             final Category category
     ) throws ServiceException {
 
         //Inizializzazione oggetto Thread
         Thread newThread = new Thread();
-        newThread.setUserId(userId);
+        newThread.setUsername(username);
         newThread.setTitle(title);
         newThread.setBody(body);
-        newThread.setVotes(votes);
-        newThread.setArchived(archived);
+        newThread.setVotes(0);
+        newThread.setArchived(false);
         newThread.setCategory(category);
         newThread.setCreationDate(LocalDate.now());
 
@@ -84,9 +96,12 @@ public class ThreadServiceImpl implements ThreadService {
         }
 
         //Salvataggio Thread
-        try {
-            threadDAO.save(newThread);
-        } catch (DAOException e) {
+        try (db) {
+
+            db.connect();
+            return threadDAO.save(newThread);
+
+        } catch (SQLException | DAOException e) {
             throw new ServiceException(
                     "Errore durante il salvataggio del thread", e);
         }
@@ -97,69 +112,85 @@ public class ThreadServiceImpl implements ThreadService {
      *
      * @param id L'ID del thread da rimuovere.
      * @throws IllegalArgumentException se l'ID è minore o uguale a 0.
-     * @throws ServiceException se si è verificato un errore.
+     * @throws ServiceException         se si è verificato un errore.
      */
     @Override
     public void removeThread(final long id) throws ServiceException {
-            try {
-                if (id <= 0) {
-                    throw new IllegalArgumentException(
-                            "Id deve essere maggiore di 0");
-                }
-                threadDAO.delete(id);
-            } catch (DAOException e) {
-                throw new ServiceException(
-                        "Errore durante l'eliminazione del thread", e);
-            }
+        if (id <= 0) {
+            throw new IllegalArgumentException(
+                    "Id deve essere maggiore di 0");
         }
+        try (db) {
+
+            db.connect();
+            threadDAO.delete(id);
+
+        } catch (SQLException | DAOException e) {
+            throw new ServiceException(
+                    "Errore durante l'eliminazione del thread", e);
+        }
+    }
 
 
     /**
      * Aggiorna un thread esistente con i nuovi dati forniti.
      * Il thread viene validato prima di essere salvato nel database.
      *
-     *
-     *
-     * @param id L'ID del thread da aggiornare.
-     * @param userId L'ID dell'utente che ha effettuato l'aggiornamento.
-     * @param title Il nuovo titolo del thread.
-     * @param body Il nuovo corpo del thread.
-     * @param votes Il nuovo numero di voti del thread.
-     * @param archived Indica se il thread deve essere archiviato.
+     * @param id       L'ID del thread da aggiornare.
+     * @param username L'ID dell'utente che ha effettuato l'aggiornamento.
+     * @param title    Il nuovo titolo del thread.
+     * @param body     Il nuovo corpo del thread.
      * @param category La nuova categoria del thread.
-     *
-     * @throws ServiceException Se il thread non è valido o se si verifica
+     * @throws ServiceException Se si verifica
      *                          un errore durante il salvataggio nel database.
+     * @throws IllegalArgumentException Se il thread non è valido.
      */
     @Override
     public void updateThread(
             final long id,
-            final long userId,
+            final String username,
             final String title,
             final String body,
-            final int votes,
-            final boolean archived,
             final Category category
-    ) throws ServiceException {
-        //Inizializzazione oggetto Thread
-        Thread updatedThread = new Thread();
-        updatedThread.setId(id);
-        updatedThread.setUserId(userId);
-        updatedThread.setTitle(title);
-        updatedThread.setBody(body);
-        updatedThread.setVotes(votes);
-        updatedThread.setArchived(archived);
-        updatedThread.setCategory(category);
-
-        //Validazione Thread
-        if (!threadValidator.validate(updatedThread)) {
-            throw new ServiceException("Thread non valido.");
-        }
-
-        //Salvataggio Thread
+    ) throws ServiceException, IllegalArgumentException {
+        //Operazioni di aggiornamento
         try {
+            db.connect();
+            db.beginTransaction();
+
+            //Verifico se esiste un thread con quell'id e lo recupero
+            Thread updatedThread = threadDAO.get(id);
+            if (updatedThread == null) {
+                throw new IllegalArgumentException(
+                        "Nessun thread trovato con id " + id);
+            }
+
+            if (updatedThread.isArchived()) {
+                throw new IllegalArgumentException("Thread è archiviato");
+            }
+
+            //Aggiorno i campi
+            updatedThread.setTitle(title);
+            updatedThread.setBody(body);
+            updatedThread.setCategory(category);
+
+            //Valido i campi aggiornati
+            if (!threadValidator.validate(updatedThread)) {
+                throw new ServiceException("Thread non valido.");
+            }
+
+            //Aggiorno il thread sul database
             threadDAO.update(updatedThread);
-        } catch (DAOException e) {
+            db.commit();
+
+        } catch (SQLException | DAOException e) {
+            //Errore durante una delle due query
+            try {
+                db.rollback();
+            } catch (SQLException ex) {
+                throw new ServiceException("Errore durante il rollback", ex);
+            }
+
             throw new ServiceException(
                     "Errore durante il salvataggio del thread", e);
         }
@@ -171,18 +202,20 @@ public class ThreadServiceImpl implements ThreadService {
      * @param id l'ID del thread da recuperare.
      * @return il thread con l'ID specificato.
      * @throws IllegalArgumentException se l'ID è minore o uguale a 0.
-     * @throws ServiceException se si è verificato un errore.
+     * @throws ServiceException         se si è verificato un errore.
      */
     @Override
     public Thread findThreadById(final long id) throws ServiceException {
-        try {
-            if (id <= 0) {
-                throw new IllegalArgumentException(
-                        "Id deve essere maggiore di 0");
-            }
+        if (id <= 0) {
+            throw new IllegalArgumentException(
+                    "Id deve essere maggiore di 0");
+        }
+        try (db) {
 
+            db.connect();
             return threadDAO.get(id);
-        } catch (DAOException e) {
+
+        } catch (SQLException | DAOException e) {
             throw new ServiceException(
                     "Errore durante il recupero del thread " + id + ".", e);
         }
@@ -199,12 +232,13 @@ public class ThreadServiceImpl implements ThreadService {
      *                 se si vuole cercare solo con il titolo.
      * @param page     Il numero della pagina da recuperare.
      * @param pageSize Il numero di thread per pagina.
-     * @param order Ordinamento della lista (più recenti,
-     *              più vecchi, più votati).
+     * @param order    Ordinamento della lista (più recenti,
+     *                 più vecchi, più votati).
+     * @param startDate La data di inizio da cui cercare thread, può
+     *                  essere {@code null}
+     * @param endDate La data di fine da cui cercare thread, può
+     *                essere {@code null}
      * @return Una lista di thread che corrispondono ai criteri di ricerca.
-     * @throws IllegalArgumentException se il <code>title</code>
-     * è <code>null</code>, <code>page</code>
-     * o <code>pageSize</code> sono minori o uguali a 0
      * @throws ServiceException se si è verificato un errore.
      */
     public List<Thread> findThreads(
@@ -212,7 +246,9 @@ public class ThreadServiceImpl implements ThreadService {
             final Category category,
             final int page,
             final int pageSize,
-            final Order order
+            final Order order,
+            final LocalDate startDate,
+            final LocalDate endDate
     ) throws ServiceException {
 
         //Sanificazione TODO da spostare
@@ -220,18 +256,37 @@ public class ThreadServiceImpl implements ThreadService {
 
         //Definizione decisioni
         boolean isCategoryNull = category == null;
-        boolean isTitleEmpty = title == null || title.trim().isEmpty();
+        boolean isTitleEmpty = title == null || title.isBlank();
+
+        LocalDate actualStartDate = LocalDate.of(1000,01,01);
+        LocalDate actualEndDate = LocalDate.of(9999,12,31);
+
+        //Controllo data inizio
+        if (startDate != null && startDate.isAfter(actualStartDate)) {
+            actualStartDate = startDate;
+        }
+
+        if (endDate != null && endDate.isBefore(actualEndDate)) {
+            actualEndDate = endDate;
+        }
+
+
 
         //Ricerca per generica
         if (isCategoryNull && isTitleEmpty) {
-            try {
+            try (db) {
+
+                db.connect();
                 return threadDAO.getThreadsByTitle(
                         "",
                         realPage,
                         pageSize,
-                        order
+                        order,
+                        actualStartDate,
+                        actualEndDate
                 );
-            } catch (DAOException e) {
+
+            } catch (SQLException | DAOException e) {
                 throw new ServiceException(
                         "Errore durante la ricerca generica", e);
             }
@@ -239,14 +294,18 @@ public class ThreadServiceImpl implements ThreadService {
 
         //Ricerca per titolo
         if (isCategoryNull) {
-            try {
+            try (db) {
+
+                db.connect();
                 return threadDAO.getThreadsByTitle(
                         title,
                         realPage,
                         pageSize,
-                        order
+                        order,
+                        actualStartDate,
+                        actualEndDate
                 );
-            } catch (DAOException e) {
+            } catch (SQLException | DAOException e) {
                 throw new ServiceException(
                         "Errore durante la ricerca per titolo", e);
             }
@@ -254,31 +313,241 @@ public class ThreadServiceImpl implements ThreadService {
 
         //Ricerca per categoria
         if (isTitleEmpty) {
-            try {
+            try (db) {
+
+                db.connect();
                 return threadDAO.getThreadsByCategory(
                         category,
                         realPage,
                         pageSize,
-                        order
+                        order,
+                        actualStartDate,
+                        actualEndDate
                 );
-            } catch (DAOException e) {
+            } catch (SQLException | DAOException e) {
                 throw new ServiceException(
                         "Errore durante la ricerca per categoria", e);
             }
         }
 
         //Ricerca per titolo e categoria
-        try {
+        try (db) {
+
+            db.connect();
             return threadDAO.getThreadsByTitle(
                     title,
                     category,
                     realPage,
                     pageSize,
-                    order
+                    order,
+                    actualStartDate,
+                    actualEndDate
             );
-        } catch (DAOException e) {
+        } catch (SQLException | DAOException e) {
             throw new ServiceException(
                     "Errore durante la ricerca per titolo e categoria", e);
         }
     }
+
+    /**
+     * Recupera i thread pubblicati da un utente, con opzioni di paginazione.
+     *
+     * @param username Il nome dell'utente.
+     * @param page     Il numero della pagina da recuperare.
+     * @param pageSize Il numero di thread per pagina.
+     * @param order    Ordinamento della lista (più recenti,
+     *                 più vecchi, più votati).
+     * @return Una lista di thread pubblicati dall'utente.
+     * @throws IllegalArgumentException se lo <code>username</code>
+     *                                  è <code>null</code> o è vuoto.
+     * @throws ServiceException         se si è verificato un errore.
+     */
+    @Override
+    public List<Thread> findThreadsByUsername(
+            final String username,
+            final int page,
+            final int pageSize,
+            final Order order
+    ) throws ServiceException {
+
+        int realPage = Math.max(page, 1);
+
+        if (username == null || username.isBlank()) {
+            throw new IllegalArgumentException("Username non valido.");
+        }
+
+        //Username valido, recupero i thread.
+        try (db) {
+
+            db.connect();
+            return threadDAO.getThreadsByUsername(
+                    username,
+                    realPage,
+                    pageSize,
+                    order
+            );
+        } catch (SQLException | DAOException e) {
+            throw new ServiceException(
+                    "Errore durante la ricerca per titolo", e);
+        }
+    }
+
+    /**
+     * Permette a un utente di votare un thread, con la possibilità di rimuovere
+     * un voto esistente (impostando il voto a 0). In caso di voto invalido, o
+     * se il thread non esiste, viene sollevata un'eccezione.
+     *
+     * @param threadId ID del thread da votare.
+     * @param username Nome utente dell'utente che sta effettuando il voto.
+     * @param vote     Valore del voto da assegnare al thread, deve essere:
+     *                 <ul>
+     *                 <li>-1: Downvote.</li>
+     *                 <li>0: Rimozione del voto esistente (se presente).</li>
+     *                 <li>1: Upvote.</li>
+     *                 </ul>
+     * @throws ServiceException Se si verifica un errore durante l'elaborazione
+     *                          del voto.
+     * @throws IllegalArgumentException Se il valore del voto non è valido
+     *                                  (diverso da -1, 0, 1).
+     */
+    public void rateThread(
+            final long threadId,
+            final String username,
+            final int vote
+    ) throws ServiceException {
+        //Sanificazione
+        if (vote < -1 || vote > 1) {
+            throw new IllegalArgumentException("Voto non valido");
+        }
+
+        try (db) {
+
+            db.connect();
+            db.beginTransaction();
+
+            //Verifico l'esistenza del thread
+            Thread thread = threadDAO.get(threadId);
+            if (thread == null) {
+                throw new ServiceException(
+                        "Nessun thread trovato con id " + threadId);
+            }
+
+            if (thread.isArchived()) {
+                throw new ServiceException("Thread è archiviato");
+            }
+
+            //Verifico l'esistenza dell'utente
+            User user = userDAO.get(username);
+            if (user == null) {
+                throw new ServiceException(
+                        "Nessun utente trovato con username " + username);
+            }
+
+            //Thread esiste, lo voto
+            if (vote == 0) {
+                //Rimuovo il voto
+                threadDAO.removeVoteThread(threadId, username);
+            } else {
+                //Inserisco il voto
+                threadDAO.voteThread(threadId, username, vote);
+            }
+
+            db.commit();
+
+        } catch (SQLException | DAOException e) {
+            try {
+                db.rollback();
+            } catch (SQLException ex) {
+                throw new ServiceException(ex);
+            }
+            throw new ServiceException(
+                    "Errore durante l'aggiunta del voto " + vote
+                            + " al thread " + threadId, e);
+        }
+    }
+
+
+    /**
+     * Sposta un thread in una nuova categoria.
+     *
+     * @param threadId L'ID del thread da spostare.
+     * @param category La nuova categoria in cui spostare il thread.
+     *                 Non può essere {@code null}.
+     * @throws IllegalArgumentException Se la categoria fornita è {@code null}.
+     * @throws ServiceException Se si verifica un errore durante l'operazione.
+     */
+    @Override
+    public void updateThreadCategory(
+            final long threadId,
+            final Category category
+    ) throws ServiceException {
+        //Controllo categoria null
+        if (category == null) {
+            throw new IllegalArgumentException("Category non può essere null.");
+        }
+
+        try (db) {
+            db.connect();
+            db.beginTransaction();
+            //Recupero thread da modificare
+            Thread thread = threadDAO.get(threadId);
+            if (thread == null) {
+                throw new ServiceException(
+                        "Nessun thread trovato con id " + threadId);
+            }
+
+            if (thread.isArchived()) {
+                throw new ServiceException("Thread è archiviato");
+            }
+
+            //Thread esistente, aggiorno la categoria
+            thread.setCategory(category);
+            threadDAO.update(thread);
+            db.commit();
+        } catch (DAOException | SQLException e) {
+            try {
+                db.rollback();
+            } catch (SQLException ex) {
+                throw new RuntimeException(ex);
+            }
+            throw new ServiceException(
+                    "Errore durante lo spostamento del thread "
+                            + threadId + " nella categoria " + category, e);
+        }
+    }
+
+    /**
+     * Archivia un thread.
+     *
+     * @param threadId L'ID del thread da archiviare.
+     * @throws ServiceException Se si verifica un errore durante l'operazione.
+     */
+    @Override
+    public void archiveThread(final long threadId) throws ServiceException {
+        try (db) {
+            db.connect();
+            db.beginTransaction();
+            //Recupero thread da modificare
+            Thread thread = threadDAO.get(threadId);
+            if (thread == null) {
+                throw new ServiceException(
+                        "Nessun thread trovato con id " + threadId);
+            }
+
+            //Archivio il thread
+            thread.setArchived(true);
+            threadDAO.update(thread);
+            db.commit();
+        } catch (DAOException | SQLException e) {
+            try {
+                db.rollback();
+            } catch (SQLException ex) {
+                throw new RuntimeException(ex);
+            }
+            throw new ServiceException(
+                    "Errore durante l'archiviazione del thread", e);
+        }
+    }
+
+
 }
